--- a/home/templates/sources/nsi/architecture/competence11.html
+++ b/home/templates/sources/nsi/architecture/competence11.html
@@ -3,17 +3,16 @@
 
 {% block contenu %} 
 <ul>
-    <li>découvrir la vision numérique à travers la vision humaine</li>
-	<li>comprendre le fonctionnement d'une image numérique</li>
-	<li>prendre conscience des risques du numérique</li>
-	<li>connaître le droit à l'image</li>
+    <li href="#humaine">découvrir la vision numérique à travers la vision humaine</li>
+	<li href="#fonctionnement">comprendre le fonctionnement d'une image numérique</li>
+	<li href="#risque">prendre conscience des risques du numérique</li>
+	<li href="#droit">connaître le droit à l'image</li>
 </ul>
 {% endblock contenu %}
 
 {% block cours %}
 
 <!-- INTRODUCTION -->
-
 <h3>Introduction</h3>
 
 <p>La vidéo suivante publiée par <em>Fun Mooc</em> sur YouTube explique le fonctionnement des photographies numériques :<br/>
@@ -21,7 +20,7 @@
 <a href="https://www.youtube.com/watch?v=UnNPNc-F9ks&feature=emb_logo" target="_blank">&#127911; vidéo | photographie numérique, Fun Mooc YouTube</a></p>
 
 
-
+<!-- HISTORIQUE -->
 <h3>Bref historique</h3>
 
 <ul>
@@ -32,6 +31,9 @@
 	<li>2007 : premier smartphone équipé d'un appareil photographique</li>
 </ul>
 
+
+<!-- VISION HUMAINE -->
+<p class="invisible" id="humaine">ancre</p>
 
 <h3>Au commencement, La vision humaine</h3>
 
@@ -44,6 +46,7 @@ pour ne percevoir finalement qu'une seule couleur élémentaire.</p>
 
 
 <!-- L'IMAGE NUMERIQUE -->
+<p class="invisible" id="fonctionnement">ancre</p>
 
 <h3>L'image numérique</h3>
 
@@ -84,7 +87,6 @@ vous rendre sur un site tel que
 </div>
 
 
-<!-- LES CARTES NUMERIQUES -->
 
 <h4>Le cas particulier des cartes numériques</h4>
 
@@ -92,6 +94,7 @@ vous rendre sur un site tel que
 
 
 <!-- LES RISQUES DU NUMERIQUE -->
+<p class="invisible" id="risque">ancre</p>
 
 <h3>Les risques du numérique</h3>
 
@@ -126,6 +129,7 @@ vous rendre sur un site tel que
 	
 
 <!-- LE DROIT A L'IMAGE -->
+<p class="invisible" id="droit">ancre</p>
 
 <h3>Le droit à l'image</h3>
 
@@ -178,7 +182,6 @@ consentement écrit de la personne propriétaire ou concernée par l'image par l
 	<p><strong>A vous de jouer : </strong>la publication de photographies prises sur un lieu public est-elle 
 		soumise à autorisation (commune, personnes présentes sur l'image) ?</p>
 </div>
-
 
 
 
